--- a/src/pages/cart/cart.module.css
+++ b/src/pages/cart/cart.module.css
@@ -52,10 +52,11 @@
   transition: all 200ms;
   box-shadow: 0px 0px 2px 2px black;
 }
-.deleteBtn:hover {
+.deleteBtn:active {
   outline: 1px solid red;
   border: 1px solid red;
   box-shadow: none;
+  transform: scale(0.8);
 }
 
 .productTitle {
