--- a/src/pages/home/homePage.module.css
+++ b/src/pages/home/homePage.module.css
@@ -1,5 +1,5 @@
 .homepageBody {
-  min-height: calc(100vh - 156px);
+  min-height: 90vh;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.689), rgba(0, 0, 0, 0.673)),
     url(/homebg.png) no-repeat center center;
   background-size: cover;
