--- a/src/components/loaderAnimation/Loader.module.css
+++ b/src/components/loaderAnimation/Loader.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: max-content;
+  min-height: 80%;
   width: 100%;
   padding: 30px;
 }
